# agentic-writing-assistant

./: .env.example  .gitignore  FRONTEND_REDESIGN.md  LICENSE  README.md
backend/: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
backend/api/: config.py  dependencies.py
backend/api/v1/: health.py  profile.py  writing.py  writing_samples.py
backend/src/: main.py  utils.py
backend/src/agents/: __init__.py  base_agent.py  editing_agent.py  orchestrator.py  personalization_agent.py  quality_assurance_agent.py  refining_agent.py  research_agent.py  writing_agent.py
backend/src/models/: __init__.py  common.py  user.py  writing.py
backend/src/services/: resume_service.py
backend/src/storage/: __init__.py  database.py  document_store.py  profile_manager.py  vector_db.py
backend/src/tools/: __init__.py  coherence_analyzer.py  gap_analyzer.py  grammar_checker.py  resume_parser.py  search_tool.py  text_analyzer.py
backend/tests/: conftest.py  test_api_keys.py
frontend/: README.md  app.py  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  MetricsGrid.tsx  ProfileForm.tsx  ProfileView.tsx  StatsGrid.tsx  StatusMonitor.tsx  WritingForm.tsx  WritingResult.tsx
frontend/src/components/profile/: AwardInput.tsx  CertificationInput.tsx  EducationInput.tsx  ExperienceInput.tsx  LanguageInput.tsx  ProjectInput.tsx  PublicationInput.tsx  RecommendationInput.tsx  SkillInput.tsx  SocialInput.tsx  VolunteeringInput.tsx  WritingPreferencesInput.tsx  WritingSampleUpload.tsx
frontend/src/components/ui/: alert.tsx  card.tsx  progress.tsx  scroll-area.tsx
frontend/src/lib/: api.ts
